# rust-web

./: Justfile  L
.devcontainer/: Dockerfile
crates/db/migrations/: 20250330114349_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/web-assets/: Cargo.toml  build.rs  tailwind.config.js
crates/web-assets/src/: lib.rs
crates/web-csr/: Cargo.toml
crates/web-csr/src/: lib.rs
crates/web-pages/: Cargo.toml
crates/web-pages/src/: layout.rs  lib.rs  root.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: config.rs  errors.rs  main.rs  root.rs  static_files.rs
